# Agentic_AI

./: pyproject.toml  requirements.txt
Langchain/LangChain-Chains/: conditional_chain.py  parallel_chain.py  sequential_chain.py  simple_chain.py
Langchain/LangChain-DocumentLoaders/: democracy.txt  text_loader.py
Langchain/LangChain-Models/ChatModels/: 1_chatmodel_openai.py  2_chatmodel_anthropic.py  3_chatmodel_google.py  4_chatmodel_hf_api.py  5_chatmodel_hf_local.py
Langchain/LangChain-Models/EmbeddingModels/: 1_embedding_openai_query.py  2_embedding_openai_doc.py  3_embedding_hf_local.py  4_document_similarity.py
Langchain/LangChain-Models/LLMs/: 1_llm_demo.py
Langchain/LangChain-Text-Splitters/: document_structure_base.py  length_based.py  python_code_splitting.py  text_structure_based.py
Langgraph/: 1_bmi_workflow.ipynb  2_simple_llm_workflow.ipynb  3_llm_prompt_chaining_workflow.ipynb  4_batsman_workflow.ipynb  css_essay_analyzer.ipynb  quadratice_eq_workflow.ipynb
